@@ -1,21 +1,18 @@
 package com.jmal.clouddisk.service.impl;
 
 import cn.hutool.core.text.CharSequenceUtil;
+import cn.hutool.core.util.RandomUtil;
+import com.jmal.clouddisk.dao.IFileDAO;
+import com.jmal.clouddisk.dao.ITagDAO;
+import com.jmal.clouddisk.lucene.LuceneQueryService;
 import com.jmal.clouddisk.model.Tag;
 import com.jmal.clouddisk.model.TagDO;
 import com.jmal.clouddisk.model.TagDTO;
-import com.jmal.clouddisk.service.Constants;
-import com.jmal.clouddisk.service.IUserService;
-import com.jmal.clouddisk.util.MongoUtil;
 import com.jmal.clouddisk.util.ResponseResult;
 import com.jmal.clouddisk.util.ResultUtil;
 import lombok.RequiredArgsConstructor;
 import org.bson.types.ObjectId;
 import org.springframework.beans.BeanUtils;
-import org.springframework.data.mongodb.core.MongoTemplate;
-import org.springframework.data.mongodb.core.query.Criteria;
-import org.springframework.data.mongodb.core.query.Query;
-import org.springframework.data.mongodb.core.query.Update;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
@@ -32,34 +29,36 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class TagService {
 
-    private final MongoTemplate mongoTemplate;
+    private final ITagDAO tagDAO;
 
-    private static final String COLLECTION_NAME = "tag";
+    private final IFileDAO fileDAO;
 
+    private final LuceneQueryService luceneQueryService;
 
-    /***
+    /**
      * 标签列表
      * @param userId userId
      * @return List<TagDTO>
      */
     public List<TagDTO> list(String userId) {
-        Query query = getQueryUserId(userId);
-        List<TagDO> tagList = mongoTemplate.find(query, TagDO.class, COLLECTION_NAME);
-        return tagList.parallelStream().map(tag -> {
-            TagDTO tagDTO = new TagDTO();
-            BeanUtils.copyProperties(tag, tagDTO);
-            return tagDTO;
-        }).sorted().toList();
+        List<TagDO> tagList = tagDAO.findTags(userId);
+        return tagList.stream()
+                .map(tag -> {
+                    TagDTO tagDTO = new TagDTO();
+                    BeanUtils.copyProperties(tag, tagDTO);
+                    return tagDTO;
+                })
+                .sorted()
+                .collect(Collectors.toList());
     }
 
-    /***
+    /**
      * 带有文章数的标签列表
      * @return List<TagDTO>
      */
     public List<TagDTO> listTagsOfArticle() {
-        Query query = getQueryUserId(null);
-        List<TagDO> tagList = mongoTemplate.find(query, TagDO.class, COLLECTION_NAME);
-        return tagList.parallelStream().map(tag -> {
+        List<TagDO> tagList = tagDAO.findTags(null);
+        return tagList.stream().map(tag -> {
             TagDTO tagDTO = new TagDTO();
             BeanUtils.copyProperties(tag, tagDTO);
             getTagArticlesNum(tagDTO);
@@ -69,56 +68,33 @@ public class TagService {
         }).filter(tag -> tag.getArticleNum() > 0).sorted().toList();
     }
 
-    /***
+    /**
      * 获取标签的文章数
      * @param tagDTO tagDTO
      */
     private void getTagArticlesNum(TagDTO tagDTO) {
-        Query query = new Query();
-        query.addCriteria(Criteria.where(Constants.TAG_IDS).is(tagDTO.getId()));
-        query.addCriteria(Criteria.where(Constants.RELEASE).is(true));
-        tagDTO.setArticleNum(mongoTemplate.count(query, CommonFileService.COLLECTION_NAME));
+        tagDTO.setArticleNum(luceneQueryService.countByTagId(tagDTO.getId()));
     }
 
     /***
-     * 获取查询条件
-     * @param userId userId
-     * @return Query
-     */
-    private Query getQueryUserId(String userId) {
-        Query query = new Query();
-        if (!CharSequenceUtil.isBlank(userId)) {
-            query.addCriteria(Criteria.where(IUserService.USER_ID).is(userId));
-        } else {
-            query.addCriteria(Criteria.where(IUserService.USER_ID).exists(false));
-        }
-        return query;
-    }
-
-    /***
-     * 获取分类信息
+     * 获取标签信息
      * @param userId 用户id
      * @param tagName 标签名
      * @return 一个分类信息
      */
     public TagDO getTagInfo(String userId, String tagName) {
-        Query query = getQueryUserId(userId);
-        query.addCriteria(Criteria.where("name").is(tagName));
-        return mongoTemplate.findOne(query, TagDO.class, COLLECTION_NAME);
+        return tagDAO.findOneTagByUserIdAndName(userId, tagName);
     }
 
     /***
-     * 获取分类信息
-     * @param userId 用户id
+     * 获取标签信息
      * @param tagSlugName 标签缩略名
      * @return 一个分类信息
      */
-    public TagDO getTagInfoBySlug(String userId, String tagSlugName) {
-        Query query = getQueryUserId(userId);
-        query.addCriteria(Criteria.where("slug").is(tagSlugName));
-        TagDO tag = mongoTemplate.findOne(query, TagDO.class, COLLECTION_NAME);
+    public TagDO getTagInfoBySlug(String tagSlugName) {
+        TagDO tag = tagDAO.findOneTagByUserIdIsNullAndSlugName(tagSlugName);
         if (tag == null) {
-            tag = getTagInfo(userId, tagSlugName);
+            tag = getTagInfo(null, tagSlugName);
         }
         return tag;
     }
@@ -129,9 +105,7 @@ public class TagService {
      * @return Tag
      */
     public TagDO getTagInfo(String tagId) {
-        Query query = new Query();
-        query.addCriteria(Criteria.where("_id").is(tagId));
-        return mongoTemplate.findOne(query, TagDO.class, COLLECTION_NAME);
+        return tagDAO.findById(tagId);
     }
 
     /***
@@ -147,12 +121,12 @@ public class TagService {
         TagDO tag = new TagDO();
         BeanUtils.copyProperties(tagDTO, tag);
         tag.setId(null);
-        mongoTemplate.save(tag, COLLECTION_NAME);
+        tagDAO.save(tag);
         return ResultUtil.success();
     }
 
     private boolean tagExists(TagDTO tagDTO) {
-        TagDO tag = getTagInfo(tagDTO.getUserId(), tagDTO.getName());
+        TagDO tag = getTagInfo(null, tagDTO.getName());
         return tag != null;
     }
 
@@ -166,37 +140,31 @@ public class TagService {
         if (tag1 == null) {
             return ResultUtil.warning("该标签不存在");
         }
-        Query query1 = new Query();
-        query1.addCriteria(Criteria.where("_id").nin(tagDTO.getId()));
-        query1.addCriteria(Criteria.where("name").is(tagDTO.getName()));
-        if (mongoTemplate.exists(query1, COLLECTION_NAME)) {
+        if (tagDAO.existsByNameAndIdNot(tagDTO.getName(), tagDTO.getId())) {
             return ResultUtil.warning("该标签名称已存在");
         }
         tagDTO.setSlug(getSlug(tagDTO));
         TagDO tag = new TagDO();
         BeanUtils.copyProperties(tagDTO, tag);
-        Query query = new Query();
-        query.addCriteria(Criteria.where("_id").is(tagDTO.getId()));
-        Update update = MongoUtil.getUpdate(tag);
-        mongoTemplate.upsert(query, update, COLLECTION_NAME);
+        tagDAO.save(tag);
         return ResultUtil.success();
     }
 
     private String getSlug(TagDTO tagDTO) {
-        Query query = new Query();
-        String slug = tagDTO.getSlug();
-        if (CharSequenceUtil.isBlank(slug)) {
-            return tagDTO.getName();
-        }
+        String baseSlug = CharSequenceUtil.isBlank(tagDTO.getSlug()) ? tagDTO.getName() : tagDTO.getSlug();
         String id = tagDTO.getId();
-        if (id != null) {
-            query.addCriteria(Criteria.where("_id").nin(id));
+
+        if (!tagDAO.existsBySlugAndIdNot(baseSlug, id)) {
+            return baseSlug;
         }
-        query.addCriteria(Criteria.where("slug").is(slug));
-        if (mongoTemplate.exists(query, COLLECTION_NAME)) {
-            return slug + "-1";
+
+        for (int i = 0; i < 20; i++) {
+            String trySlug = baseSlug + RandomUtil.randomInt(1, 10000);
+            if (!tagDAO.existsBySlugAndIdNot(trySlug, id)) {
+                return trySlug;
+            }
         }
-        return slug;
+        return new ObjectId().toHexString();
     }
 
     /***
@@ -204,9 +172,7 @@ public class TagService {
      * @param tagIdList tagIdList
      */
     public void delete(List<String> tagIdList) {
-        Query query = new Query();
-        query.addCriteria(Criteria.where("_id").in(tagIdList));
-        mongoTemplate.remove(query, COLLECTION_NAME);
+        tagDAO.removeByIdIn(tagIdList);
     }
 
     /**
@@ -239,9 +205,7 @@ public class TagService {
     }
 
     private Tag getTagIdByName(String tagName, String color, String userId) {
-        Query query = new Query();
-        query.addCriteria(Criteria.where("name").is(tagName));
-        TagDO tag = mongoTemplate.findOne(query, TagDO.class, COLLECTION_NAME);
+        TagDO tag = getTagInfo(userId, tagName);
         if (tag == null) {
             // 添加新标签
             tag = new TagDO();
@@ -264,7 +228,7 @@ public class TagService {
         }
         tag.setName(tagName);
         tag.setSlug(tagName);
-        mongoTemplate.save(tag, COLLECTION_NAME);
+        tagDAO.save(tag);
         Tag fileDocumentTag = new Tag();
         fileDocumentTag.setTagId(tag.getId());
         fileDocumentTag.setName(tagName);
@@ -279,12 +243,7 @@ public class TagService {
      * @param tag 标签
      */
     private void updateFilDocumentTag(String color, String tagName, TagDO tag) {
-        Query query1 = new Query();
-        query1.addCriteria(Criteria.where("tags.tagId").is(tag.getId()));
-        Update update = new Update();
-        update.set("tags.$.color", color);
-        update.set("tags.$.name", tagName);
-        mongoTemplate.updateMulti(query1,update, CommonFileService.COLLECTION_NAME);
+        fileDAO.updateTagInfoInFiles(tag.getId(), tagName, color);
     }
 
     /***
@@ -292,10 +251,8 @@ public class TagService {
      * @param tagIds 标签id集合
      * @return 标签列表
      */
-    public List<TagDO> getTagListByIds(Object[] tagIds) {
-        Query query = new Query();
-        query.addCriteria(Criteria.where("_id").in(tagIds));
-        return mongoTemplate.find(query, TagDO.class, COLLECTION_NAME);
+    public List<TagDO> getTagListByIds(List<String> tagIds) {
+        return tagDAO.findAllById(tagIds);
     }
 
     /**
@@ -313,12 +270,6 @@ public class TagService {
             tagDTO.setId(tagIdList.get(i));
             tagDTOList.add(tagDTO);
         }
-        tagDTOList.parallelStream().forEach(tagDTO -> {
-            Query query = new Query();
-            query.addCriteria(Criteria.where("_id").is(tagDTO.getId()));
-            Update update = new Update();
-            update.set("sort", tagDTO.getSort());
-            mongoTemplate.updateFirst(query, update, COLLECTION_NAME);
-        });
+        tagDTOList.parallelStream().forEach(tagDTO -> tagDAO.updateSortById(tagDTO.getId(), tagDTO.getSort()));
     }
 }
